# CNA3

./: .gitignore  CLAUDE.md  README.md  Rules.txt  pyproject.toml
.claude/: settings.json
.githooks/: pre-commit
cna/: __editor__.py  __init__.py  __main__.py
guides/: logistics-guide.md
references/: case_index.json  cross_refs.json  section_01.md  section_02.md  section_03.md  section_04.md  section_05.md  section_06.md  section_07.md  section_08.md  section_09.md  section_10.md  section_11.md  section_12.md  section_13.md  section_14.md  section_15.md  section_16.md  section_17.md  section_18.md  section_19.md  section_20.md  section_21.md  section_22.md  section_23.md  section_24.md  section_25.md  section_26.md  section_27.md  section_28.md  section_29.md  section_30.md  section_31.md  section_32.md  section_33.md  section_34.md  section_35.md  section_36.md  section_37.md  section_38.md  (+27 more)
rules/: 00-introduction.md  01-glossary.md  02-game-equipment.md  03-sequence-of-play.md  04-capability-points.md  05-initiative.md  06-land-movement.md  07-stacking.md  08-zones-of-control.md  09-combat-system.md  10-patrols-recon.md  11-morale.md  12-reserve-status.md  13-organization.md  14-reinforcements.md  15-breakdown-repair.md  16-engineers-construction.md  17-fortifications-mines.md  18-desert-raiders.md  19-prisoners.md  20-weather.md  21-mediterranean-fleet.md  22-rommel.md  23-abstract-rules.md  24-air-game.md  25-logistics.md  26-scenarios.md  27-orders-of-battle.md  28-charts-tables.md
scripts/: check_case_citations.py  coverage.py  extract_rules.py  replay.py  (+1 more)
(+99 files in other folders)
