[project]
name = "cna"
version = "0.1.0"
description = "The Campaign for North Africa — Computer Edition"
requires-python = ">=3.12"
dependencies = [
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
ai = [
    "numpy>=1.26",
]

[tool.pytest.ini_options]
testpaths = ["cna/tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
